[package]
name = "xcm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = "0.5.11"
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
structopt = "0.3.25"
subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
tokio = { version = "1.14.0", features = ["macros"] }
